[project]
name = "abacaba"
version = "0.1.0"
description = ""
authors = [
    {name = "Ваше Имя",email = "khabibtime@rambler.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.123.8,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "abacaba", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
